--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -111,3 +111,42 @@ select {
     transform: rotate(360deg);
   }
 }
+
+.quote {
+  position: relative;
+  isolation: isolate;
+  /* background-color: #d3bdff; */
+}
+
+.quote > p {
+  text-align: center;
+  padding: 2rem;
+  padding-bottom: 0;
+  font-size: 2.4rem;
+  font-weight: 700;
+  color: #464a4d;
+}
+
+.quote:before {
+  content: open-quote;
+  font-family: serif;
+  font-weight: 900;
+  font-size: 15rem;
+  color: #d3bdff;
+  position: absolute;
+  top: -6rem;
+  left: -0.5rem;
+  z-index: -1;
+}
+
+.quote:after {
+  content: close-quote;
+  font-family: serif;
+  font-weight: 900;
+  font-size: 15rem;
+  color: #d3bdff;
+  position: absolute;
+  top: 5.2rem;
+  right: 0;
+  z-index: -1;
+}
