--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,11 +77,13 @@ input[type='number'] {
 
 input[type='month'] {
   -webkit-appearance: none;
+  appearance: none;
 }
 
 select {
   outline: none;
   appearance: none;
+  -webkit-appearance: none;
   background-image: url(../assets/arrow-down-2.png);
   background-size: 2.2rem;
   background-position: 97%;
