--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -118,3 +118,17 @@ select {
     transform: rotate(360deg);
   }
 }
+
+.react-datepicker-wrapper {
+  display: block;
+}
+
+.react-datepicker-wrapper input {
+  width: 100%;
+  font-size: 1.6rem;
+  color: #464a4d;
+  border: 1px solid #e3e5e5;
+  padding: 0.8rem 1rem;
+  border-radius: 1rem;
+  margin-top: 0.2rem;
+}
